--- a/HackerNews/StoryTableCellView.xib
+++ b/HackerNews/StoryTableCellView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -118,7 +118,7 @@
                 <outlet property="titleLabel" destination="JuK-fB-06q" id="Lza-qJ-AUC"/>
                 <outlet property="typeImageView" destination="qeJ-9C-D45" id="Y3k-iT-AP3"/>
             </connections>
-            <point key="canvasLocation" x="231" y="141.5"/>
+            <point key="canvasLocation" x="472" y="186.5"/>
         </tableViewCell>
     </objects>
     <resources>
