--- a/HackerNews/StoryTextCellView.xib
+++ b/HackerNews/StoryTextCellView.xib
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyTextCell" rowHeight="62" id="dF7-TC-nGI" customClass="StoryTextViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyTextCell" rowHeight="117" id="dF7-TC-nGI" customClass="StoryTextViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dF7-TC-nGI" id="Jqq-G2-2Te">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg6-D7-rrz">
-                        <rect key="frame" x="40" y="9" width="229" height="42"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg6-D7-rrz">
+                        <rect key="frame" x="40" y="9" width="229" height="101"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                     </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="Hg6-D7-rrz" secondAttribute="bottom" constant="5" id="CwM-SZ-Pn8"/>
-                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="top" secondItem="Jqq-G2-2Te" secondAttribute="topMargin" constant="1" id="J7C-JB-X20"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Hg6-D7-rrz" secondAttribute="trailing" constant="10" id="KAI-Jr-4Sb"/>
-                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="leading" secondItem="Jqq-G2-2Te" secondAttribute="leadingMargin" constant="32" id="lfP-68-ZDU"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Hg6-D7-rrz" secondAttribute="trailing" constant="10" id="EbL-sc-bSL"/>
+                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="top" secondItem="Jqq-G2-2Te" secondAttribute="topMargin" constant="1" id="M8Q-S5-WZa"/>
+                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="leading" secondItem="Jqq-G2-2Te" secondAttribute="leadingMargin" constant="32" id="SUl-fU-ZM7"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Hg6-D7-rrz" secondAttribute="bottom" constant="1" id="ytH-XG-bLT"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="storyText" destination="Hg6-D7-rrz" id="Aab-RH-2Q4"/>
             </connections>
-            <point key="canvasLocation" x="432" y="-47.5"/>
+            <point key="canvasLocation" x="432" y="-21"/>
         </tableViewCell>
     </objects>
 </document>
